# citylab_project

./: README.md
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: GetDirection.srv
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: get_direction__builder.hpp  get_direction__functions.c  get_direction__struct.hpp  get_direction__traits.hpp  get_direction__type_support.c  get_direction__type_support.cpp
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
install/custom_interfaces/share/custom_interfaces/cmake/: custom_interfaces__rosidl_typesupport_cExport.cmake  export_custom_interfaces__rosidl_generator_cExport.cmake  export_custom_interfaces__rosidl_generator_cppExport.cmake  export_custom_interfaces__rosidl_generator_pyExport.cmake  export_custom_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_custom_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
install/custom_interfaces/share/custom_interfaces/srv/: GetDirection_Response.msg
install/robot_patrol/include/robot_patrol/robot_patrol/action/detail/: go_to_pose__functions.c  (+4 more)
install/robot_patrol/lib/robot_patrol/: action_service  direction_service  robot_patrol_executable  robot_patrol_executable2  test_service
install/robot_patrol/share/ament_index/resource_index/package_run_dependencies/: robot_patrol
install/robot_patrol/share/ament_index/resource_index/parent_prefix_path/: robot_patrol
install/robot_patrol/share/robot_patrol/: package.xml
install/robot_patrol/share/robot_patrol/cmake/: export_robot_patrol__rosidl_generator_cExport.cmake  export_robot_patrol__rosidl_generator_cppExport.cmake  export_robot_patrol__rosidl_generator_pyExport.cmake  robot_patrol__rosidl_typesupport_cppExport.cmake  robot_patrol__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/robot_patrol/share/robot_patrol/launch/: main.launch.py  start_direction_service.launch.py  start_patrolling.launch.py  start_test_service.launch.py
install/robot_patrol/share/robot_patrol/rivz/: realvizconfig.rviz  virtualrvizconfig.rviz
log/: latest_build
robot_patrol/: CMakeLists.txt  odominterfacenotes.txt  package.xml  sensormsgnotes.txt
robot_patrol/include/robot_patrol/: direction_service.h
robot_patrol/launch/: main.launch.py  start_gotopose_action.launch.py  start_patrolling.launch.py
robot_patrol/rivz/: realvizconfig.rviz
robot_patrol/src/: direction_service.cpp  go_to_pose_action.cpp  patrol.cpp  patrol_with_service.cpp  test_service.cpp
(+3 files in other folders)
